# MNETI

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.ts
backend/src/config/: solana.ts
backend/src/oracle/pyth/: client.ts
backend/src/oracle/relay/: runner.ts
backend/src/oracle/six/: client.ts
backend/src/utils/: logger.ts
programs/mneti-kesh/: Cargo.toml
programs/mneti-kesh/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/mneti-kesh/src/instructions/: mod.rs
programs/mneti-oracle/: Cargo.toml
programs/mneti-oracle/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/mneti-oracle/src/instructions/: mod.rs
programs/mneti-rbac/: Cargo.toml
programs/mneti-rbac/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/mneti-rbac/src/instructions/: mod.rs
programs/mneti-vault-registry/: Cargo.toml
programs/mneti-vault-registry/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/mneti-vault-registry/src/instructions/: mod.rs
scripts/: setup.sh
tests/: mneti.test.ts  phase1.test.ts
