[workspace]
members = [
    "programs/mneti-rbac",
    "programs/mneti-vault-registry",
    "programs/mneti-kesh",
    "programs/mneti-oracle",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
