[package]
name        = "mneti-kesh"
version     = "0.1.0"
description = "MNETI KESH — KES-pegged stablecoin backed by Kenyan T-bills"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "mneti_kesh"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }
spl-token   = { version = "4.0.0",  features = ["no-entrypoint"] }
