[package]
name        = "mneti-kesh"
version     = "0.2.0"
description = "MNETI KESH — KES-pegged stablecoin backed by Kenyan T-bills"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "mneti_kesh"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token", "associated_token"] }
spl-token   = { version = "4.0.0",  features = ["no-entrypoint"] }
