[package]
name        = "mneti-oracle"
version     = "0.2.0"
description = "MNETI Oracle — SIX Financial primary + Pyth fallback + TWAP"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "mneti_oracle"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
