[package]
name        = "mneti-rbac"
version     = "0.1.0"
description = "MNETI Role-Based Access Control — defines and enforces all protocol roles"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "mneti_rbac"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
