[package]
name        = "mneti-vault-registry"
version     = "0.1.0"
description = "MNETI Vault Registry — master registry for all vault types"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "mneti_vault_registry"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang  = { version = "0.31.1", features = ["init-if-needed"] }
mneti-rbac   = { path = "../mneti-rbac", features = ["no-entrypoint"] }
